--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0"
   },
-  
   "devDependencies": {
     "@parcel/transformer-sass": "^2.9.2",
     "process": "^0.11.10"
   }
-
-
 }
